gitignore no teste

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /djangoDireito/direitoproject/__pycache__
 *.pyc
 djangoDireito/direitoproject/__pycache__/settings.cpython-312.pyc
+/djangoDireito/direitoproject/__pycache__
+/djangoDireito/direitoproject/__pycache__
