--- a/djangoDireito/requirements.txt
+++ b/djangoDireito/requirements.txt
@@ -1,5 +1,14 @@
 asgiref==3.8.1
+attrs==25.3.0
+beautifulsoup4==4.13.3
+behave==1.2.7.dev6
+behave-django==1.5.0
+certifi==2025.1.31
+cffi==1.17.1
+colorama==0.4.6
 cramjam==2.9.0
+cucumber-expressions==18.0.1
+cucumber-tag-expressions==6.1.2
 Django==5.0.4
 django-cors-headers==4.3.1
 django-environ==0.11.2
@@ -8,15 +17,43 @@ django-rest-framework-mongoengine==3.4.1
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
 dnspython==2.7.0
+drf-yasg==1.21.10
+h11==0.16.0
+idna==3.10
+inflection==0.5.1
+iniconfig==2.1.0
 mongoengine==0.29.1
+outcome==1.3.0.post0
+packaging==24.2
+parse==1.20.2
+parse_type==0.6.4
 pillow==10.3.0
+pluggy==1.5.0
 psycopg==3.2.5
 psycopg2==2.9.9
+pycparser==2.22
 PyJWT==2.9.0
 pymongo==4.10.1
 PyMySQL==1.1.1
+PySocks==1.7.1
+pytest==8.3.5
+pytest-django==4.10.0
+python-dotenv==1.1.0
 python-snappy==0.7.3
+pytz==2025.2
+PyYAML==6.0.2
+selenium==4.31.0
+six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.6
 sqlparse==0.5.1
+trio==0.30.0
+trio-websocket==0.12.2
 typing_extensions==4.11.0
 tzdata==2024.1
+uritemplate==4.1.1
+urllib3==2.4.0
+websocket-client==1.8.0
 winkerberos==0.12.0
+wsproto==1.2.0
