--- a/direitoSimplesFront/angular.json
+++ b/direitoSimplesFront/angular.json
@@ -72,6 +72,8 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "proxyConfig": "proxy.conf.json" },
           "configurations": {
             "production": {
               "buildTarget": "direitoSimplesFront:build:production"
